--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,11 @@ body {
     text-align: center;
 }
 
-header {
-    background-color: #007BFF;
-    color: white;
-    padding: 1rem 0;
-}
-
 main {
     margin: 2rem;
+    display: grid;
+    place-items: center;
+    width: 100%;
 }
 
 button {
@@ -25,8 +22,40 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin: 5px;
 }
 
 button:hover {
     background-color: #0056b3;
+}
+#settings {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid red;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#board {
+    color: red;
+    display: none;
+    flex-wrap: wrap;
+    padding: 5px;
+    border: 3px solid blue;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.square {
+    display: flex;
+    flex: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
