--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,25 @@ button:hover {
     transform: translate(-50%, -50%);
 }
 
+input[type="color"] {
+    width: 100%;
+}
+
+
+#gameOver {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
 #board {
-    color: red;
     display: none;
     flex-wrap: wrap;
-    padding: 5px;
     border: 3px solid blue;
     justify-content: center;
     position: absolute;
